--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,8 @@
     "tailwindcss": "^3.1.8"
   },
   "scripts": {
-    "start": "env-cmd react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f ./.env.development react-scripts start",
+    "build": "env-cmd -f ./.env.production react-scripts build && cp -r build/* ../backend/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
