--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.6.7",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "radial-progress-chart": "^0.0.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
