--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "universal-base64url": "^1.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
