--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "start": "env-cmd -f ./.env.development react-scripts start",
     "build": "env-cmd -f ./.env.production react-scripts build && cp -r build/* ../backend/public",
+    "build:local": "env-cmd -f ./.env.development react-scripts build && cp -r build/* ../backend/public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
