location based & market based now showing data

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,6 +1,6 @@
 PORT="5000"
 NODE_ENV="development"
-DATABASE_NAME="teal-climate"
+DATABASE_NAME="tealClimate"
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="admin"
 DATABASE_HOST="localhost"
