--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "leaflet": "^1.9.4",
     "radial-progress-chart": "^0.0.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
