--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,32 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^16.11.14",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "apexcharts": "^3.45.2",
+    "axios": "^1.6.7",
+    "env-cmd": "^10.1.0",
+    "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "leaflet": "^1.9.4",
+    "radial-progress-chart": "^0.0.4",
+    "react-apexcharts": "^1.4.1",
+    "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4",
+    "tailgrids": "^2.1.0",
+    "universal-base64url": "^1.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -21,6 +46,9 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
