--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.7",
     "tailgrids": "^2.1.0",
     "universal-base64url": "^1.1.0",
     "yup": "^1.3.3"
