1. build script added to copy dist content from frontend folder to public folder in backend folder 2. npm script are updated to generate build for local as well as production 3. .env.production added 4. icons import are added and replace all 'src' url with import items

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp -r dist/* ../backend/public",
+    "build": "vite build && bash ./build.sh",
+    "build:local": "vite build --mode development && bash ./build.sh",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
