--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon ./src/index.js",
+    "dev": "cross-env NODE_ENV=development node --watch ./src/index.js",
     "prod": "node ./src/index.js"
   },
   "dependencies": {
@@ -16,7 +16,6 @@
     "stripe": "^15.3.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "nodemon": "^3.1.0"
+    "cross-env": "^7.0.3"
   }
 }
