--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,9 +3,6 @@ name: Node.js CI/CD
 on:
   push:
     branches: [ "v1" ]
-  # Uncomment the following lines to trigger the workflow on pull requests as well
-  # pull_request:
-  #   branches: [ "main" ]
 
 jobs:
   build-and-deploy:
@@ -39,13 +36,26 @@ jobs:
       working-directory: frontend
       run: ls -la
 
-
     - name: Build frontend
       working-directory: frontend
       run: npm run build
 
-    - name: Copy build artifacts to backend
-      run: bash frontend/build.sh
+    - name: Install pm2 if not already installed
+      run: npm install -g pm2
+
+    - name: Stop pm2 server for frontend
+      run: sudo pm2 stop Web-App-frontend || true
+
+    - name: Start or restart Web-App-frontend
+      run: |
+        if pm2 list | grep -q "Web-App-frontend"; then
+          pm2 restart Web-App-frontend --update-env
+        else
+          pm2 start frontend/dist/index.html --name "Web-App-frontend"
+        fi
+
+    # - name: Copy build artifacts to backend
+    #   run: bash frontend/build.sh
 
     # Install dependencies and run tests in backend
     - name: Install backend dependencies
@@ -56,21 +66,17 @@ jobs:
       working-directory: backend
       run: ls -la
 
-
     - name: Run backend script
       working-directory: backend/src
       run: node index.js
 
-    - name: Install pm2 if not already installed
-      run: npm install -g pm2
+    - name: Stop pm2 server for backend
+      run: sudo pm2 stop Web-App-backend || true
 
-    - name: Stop pm2 server
-      run: sudo pm2 stop Web-App || true
-
-    - name: Start or restart Web-App
+    - name: Start or restart Web-App-backend
       run: |
-        if pm2 list | grep -q "Web-App"; then
-          pm2 restart Web-App --update-env
+        if pm2 list | grep -q "Web-App-backend"; then
+          pm2 restart Web-App-backend --update-env
         else
-          pm2 start backend/src/index.js --name "Web-App"
+          pm2 start backend/src/index.js --name "Web-App-backend"
         fi
