--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,6 +1,6 @@
 PORT="5000"
 NODE_ENV="development"
-DATABASE_NAME="tealClimate"
+DATABASE_NAME="teal_climate_test"
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="admin"
 DATABASE_HOST="localhost"
