--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node --watch ./src/index.js",
-    "prod": "node ./src/index.js"
+    "init-db:local": "cross-env NODE_ENV=development node ./seed/initializeDatabase.js",
+    "prod": "node ./src/index.js",
+    "init-db:prod": "node ./seed/initializeDatabase.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -18,6 +20,7 @@
     "stripe": "^15.3.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "csv-parser": "^3.0.0"
   }
 }
