1. reits, eeios, activities tables updated 2. Reit activity can be read, add, update and delete

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,5 +1,5 @@
 PORT="5000"
-DATABASE_NAME="tealClimateDev"
+DATABASE_NAME="tealClimateDevNewTables"
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="admin"
 DATABASE_HOST="localhost"
