backend package.json file updated 1. NodeJs version specified 2. start sript added

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "prod": "cross-env NODE_ENV=production node ./src/index.js",
     "init-db:prod": "cross-env NODE_ENV=production node ./seed/initializeDatabase.js",
     "test": "cross-env NODE_ENV=test node ./test/index.js",
-    "init-db:test": "cross-env NODE_ENV=test node ./seed/initializeDatabase.js"
+    "init-db:test": "cross-env NODE_ENV=test node ./seed/initializeDatabase.js",
+    "start": "npm run prod"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -26,5 +27,8 @@
   },
   "devDependencies": {
     "csv-parser": "^3.0.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
