--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepare": "husky",
     "format": "npx prettier --write .",
     "lint": "npx eslint --fix",
-    "start": "cd backend && npm run prod",
-    "start:dev": "cd backend && npm run dev"
+    "start": "cd backend && npm install && npm run prod",
+    "start:dev": "cd backend && npm install && npm run dev"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
