--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && bash ./build.sh",
-    "build:local": "vite build --mode development && bash ./build.sh",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
